src/Test/Fixtures/Bad/BitQubit/unexpectedSecondArgumentInQallocDeclaration.lf
let q : qubit = qalloc(1 2);